<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232326"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:layout_width="106dp"
        android:layout_height="104dp"
        android:id="@+id/imageView4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/jukebox"
        android:contentDescription="@string/jukebox_logo"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_host_code"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#a493e2"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/share_host_code_info"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textColor="#a493e2"
        android:textAlignment="center"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@drawable/custom_edit_text"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:layout_marginBottom="25dp"
        android:hint="@string/join_code_info"
        android:textColor="#FFF"
        android:textColorHighlight="#FFF"
        android:textColorHint="#FFF"
        android:textColorLink="#FFF"
        android:text="@string/enter_party_id"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLoginButtonClicked"
        android:text="@string/join_the_party"
        android:background="#a493e2"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAllCaps="false"/>
</LinearLayout>