<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#232326">

    <ImageView
        android:layout_width="106dp"
        android:layout_height="104dp"
        android:id="@+id/imageView4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/jukebox"
        android:contentDescription="@string/jukebox_logo"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_host_code"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#a493e2"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1234567890"
        android:id="@+id/share_join_code"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#a493e2"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/share_host_code_info"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textColor="#a493e2"
        android:textAlignment="center" />
</LinearLayout>