<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Host"
        android:id="@+id/hostButton"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Client"
        android:id="@+id/clientButton"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/share_invite_layout"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_host_code"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#FFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123456789"
            android:id="@+id/show_invitie_code"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/join_party_layout"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_code"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:textColor="#FFF" />

        <EditText
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF"
            android:textColorHighlight="#FFF"
            android:textColorHint="#FFF"
            android:textColorLink="#FFF" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/join_the_party"
            android:id="@+id/clickSend"
            android:background="@drawable/join_party_button"
            android:layout_gravity="center_horizontal"
            android:textColor="#a493e2"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>